# nonebot-plugin-guild-patch

./: README.md  bot.py  pyproject.toml
nonebot_plugin_guild_patch/: __init__.py  models.py  permission.py
