[tool.poetry]
name = "nonebot-plugin-guild-patch"
version = "0.2.2"
description = "Patch plugin for NoneBot2 QQ guild (go-cqhttp) support."
authors = ["Mix <mnixry@users.noreply.github.com>"]
license = "MIT"
packages = [{ include = 'nonebot_plugin_guild_patch' }]
readme = "README.md"
repository = "https://github.com/mnixry/nonebot-plugin-guild-patch"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"
nonebot-adapter-onebot = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
